build out more of the Samples page, added new component SamplesCardHeader, fix Card styling that added extra space between title & table, make Color left nav a Card also

--- a/apps/theming-designer/src/components/app.scss
+++ b/apps/theming-designer/src/components/app.scss
@@ -11,7 +11,7 @@ html {
 }
 
 .sidebar {
-  flex: 0 0 300px;
+  flex: 0 0 400px;
   background: #fff;
 }
 
